--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>Developer Portfolio | Your Name</title>
 
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 
@@ -161,7 +161,7 @@
                 <!-- Profile Image -->
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-64 h-64 md:w-80 md:h-80 profile-image-border">
-                        <img src="../assets/images/Himanshu.jpg" alt="Your Name"
+                        <img src="./assets/images/Himanshu.jpg" alt="Your Name"
                             class="rounded-full object-cover w-full h-full shadow-2xl transform hover:scale-105 transition-all duration-300" />
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                 <div class="flex flex-col md:flex-row items-center justify-between gap-12">
                     <!-- About Image -->
                     <div class="md:w-1/2">
-                        <img src="../assets/images/Himanshu-Singh.jpg" alt="About Me"
+                        <img src="./assets/images/Himanshu-Singh.jpg" alt="About Me"
                             class="rounded-lg shadow-2xl transform hover:scale-105 transition-duration-300 w-full" />
                     </div>
 
@@ -387,13 +387,13 @@
                     <!-- Certification Card 1 -->
                     <div
                         class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-all duration-300">
-                        <img src="../assets/images/Web-Development.jpg" alt="Web Development"
+                        <img src="./assets/images/Web-Development.jpg" alt="Web Development"
                             class="w-full h-60 object-cover" alt="Web Development" class="w-full h-48 object-cover" />
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-3">
                                 Web Development
                             </h3>
-                            <a href="../assets/docs/Himanshu Kumar Singh SevenMentor Pvt Ltd_Certificate.pdf"
+                            <a href="./assets/docs/Himanshu Kumar Singh SevenMentor Pvt Ltd_Certificate.pdf"
                                 target="_blank"
                                 class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg transform hover:scale-105 transition-all">
                                 View Certificate <i class="fas fa-external-link-alt ml-2"></i>
@@ -404,13 +404,13 @@
                     <!-- Certification Card 2 -->
                     <div
                         class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-all duration-300">
-                        <img src="../assets/images/Machine-Learning.jpg" alt="Machine Learning"
+                        <img src="./assets/images/Machine-Learning.jpg" alt="Machine Learning"
                             class="w-full h-60 object-cover" alt="Machine Learning" class="w-full h-48 object-cover" />
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-3">
                                 Machine Learning
                             </h3>
-                            <a href="../assets/docs/Himanshu Kumar Singh SmartBrains.pdf" target="_blank"
+                            <a href="./assets/docs/Himanshu Kumar Singh SmartBrains.pdf" target="_blank"
                                 class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg transform hover:scale-105 transition-all">
                                 View Certificate <i class="fas fa-external-link-alt ml-2"></i>
                             </a>
@@ -420,14 +420,14 @@
                     <!-- Certification Card 3 -->
                     <div
                         class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-all duration-300">
-                        <img src="../assets/images/Python-Programming.jpg" alt="Python Programming"
+                        <img src="./assets/images/Python-Programming.jpg" alt="Python Programming"
                             class="w-full h-60 object-cover" alt="Python Programming"
                             class="w-full h-48 object-cover" />
                         <div class="p-6">
                             <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-3">
                                 Python Programming
                             </h3>
-                            <a href="../assets/docs/Introduction to Programming using Python.pdf" target="_blank"
+                            <a href="./assets/docs/Introduction to Programming using Python.pdf" target="_blank"
                                 class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg transform hover:scale-105 transition-all">
                                 View Certificate <i class="fas fa-external-link-alt ml-2"></i>
                             </a>
@@ -448,7 +448,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/Blog-website/" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/Blog-Website.png" alt="Blog Website"
+                            <img src="./assets/images/Blog-Website.png" alt="Blog Website"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
@@ -466,7 +466,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/bootstrap/index.html" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/CrowdFunding-Website.png" alt="CrowdFunding Website"
+                            <img src="./assets/images/CrowdFunding-Website.png" alt="CrowdFunding Website"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
@@ -484,7 +484,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/Gym-Website/" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/Gym-Website.png" alt="Gym Website"
+                            <img src="./assets/images/Gym-Website.png" alt="Gym Website"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
@@ -501,7 +501,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/Landing-Page-HTML-CSS/#" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/Landing-Page.png" alt="Landing Page Template"
+                            <img src="./assets/images/Landing-Page.png" alt="Landing Page Template"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
@@ -519,7 +519,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/SignupForm/" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/Sign-Up.png" alt="Indian Flag made by HTML & CSS"
+                            <img src="./assets/images/Sign-Up.png" alt="Indian Flag made by HTML & CSS"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
@@ -537,7 +537,7 @@
                     <div class="bg-white dark:bg-gray-700 rounded-xl shadow-lg overflow-hidden group">
                         <a href="https://himanshuacoder.github.io/Indian-Flag-HTML-CSS/" target="_blank"
                             class="relative overflow-hidden block">
-                            <img src="../assets/images/Indian-Flag.png" alt="Indian Flag made by HTML & CSS"
+                            <img src="./assets/images/Indian-Flag.png" alt="Indian Flag made by HTML & CSS"
                                 class="w-full h-60 object-cover transform group-hover:scale-110 transition-all duration-300" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
