--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
 
                     <!-- Resume Button -->
-                    <a href="https://himanshuacoder.github.io/My-Resume/" download
+                    <a href="https://himanshuacoder.github.io/My-Resume/"
                         class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-8 py-3 rounded-full 
                         transform hover:scale-105 transition-all shadow-lg hover:shadow-xl" target="_blank">
                         Preview Resume <i class="fas fa-download ml-2"></i>
